--- a/docker-compose-linux.yml
+++ b/docker-compose-linux.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: ../
       dockerfile: dockerfiles/nodejs/Dockerfile
-    image: erdinc/nodejs:${APP_NAME}_nodejs
+#image: erdinc/nodejs:${APP_NAME}_nodejs
     container_name: ${APP_NAME}_api
     ports:
       - 5000:5000
@@ -43,7 +43,7 @@ services:
     ports:
       - 5672:5672
       - 15672:15672   
-    image: erdinc/rabbitmq:${APP_NAME}_rabbitmq
+#image: erdinc/rabbitmq:${APP_NAME}_rabbitmq
     container_name: ${APP_NAME}_queue
     #depends_on:
     #      - redis
